fix: dark mode for card content description

--- a/src/components/Card/Card.sass
+++ b/src/components/Card/Card.sass
@@ -47,7 +47,8 @@
 			margin-bottom: 0
 
 	.Card_Content_Description
-		color: $gray
+		@include theme-color-gray-else-gray75
+		font-weight: 300
 
 	.Card_Footer
 		display: flex
